# human-readble-cron

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
human_readable_cron/: cli.py  converter.py
human_readable_cron.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
human_readable_cron/src/: cli.py  converter.py
human_readable_cron/test/: test_converter.py
