[project]
name = "human-readable-cron"
version = "0.0.0" #placeholder version
description = "convert text scheduling to cron format"
authors = [
    {name = "Sumanta Ghosh"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
human-readable-cron = "human_readable_cron.cli:main"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"